--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -135,6 +135,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:            Crime_Count   R-squared:                       0.240\n",
+      "Model:                            OLS   Adj. R-squared:                  0.235\n",
+      "Method:                 Least Squares   F-statistic:                     47.92\n",
+      "Date:                Tue, 26 Mar 2024   Prob (F-statistic):          1.64e-220\n",
+      "Time:                        16:17:59   Log-Likelihood:                -12091.\n",
+      "No. Observations:                4134   AIC:                         2.424e+04\n",
+      "Df Residuals:                    4106   BIC:                         2.441e+04\n",
+      "Df Model:                          27                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================================\n",
+      "                                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------------------------\n",
+      "const                             31.7820     15.407      2.063      0.039       1.575      61.989\n",
+      "FullMoon                          -0.7541      0.379     -1.991      0.047      -1.497      -0.011\n",
+      "Holiday                            0.3346      0.370      0.905      0.365      -0.390       1.059\n",
+      "tempmax                            0.0478      0.109      0.438      0.662      -0.166       0.262\n",
+      "tempmin                            0.0186      0.119      0.157      0.875      -0.214       0.251\n",
+      "temp                              -0.1301      0.278     -0.468      0.639      -0.675       0.414\n",
+      "feelslikemax                      -0.0237      0.079     -0.300      0.764      -0.179       0.131\n",
+      "feelslikemin                      -0.0807      0.093     -0.870      0.384      -0.263       0.101\n",
+      "feelslike                          0.2608      0.156      1.677      0.094      -0.044       0.566\n",
+      "dew                                0.0330      0.186      0.177      0.860      -0.333       0.399\n",
+      "humidity                           0.0065      0.049      0.134      0.893      -0.089       0.102\n",
+      "precip                            -0.0385      0.015     -2.482      0.013      -0.069      -0.008\n",
+      "precipcover                       -0.0081      0.008     -1.001      0.317      -0.024       0.008\n",
+      "snow                              -0.2031      0.124     -1.633      0.103      -0.447       0.041\n",
+      "windspeed                         -0.0110      0.012     -0.906      0.365      -0.035       0.013\n",
+      "sealevelpressure                  -0.0182      0.013     -1.354      0.176      -0.044       0.008\n",
+      "cloudcover                         0.0094      0.005      1.840      0.066      -0.001       0.019\n",
+      "visibility                        -0.0053      0.055     -0.098      0.922      -0.113       0.102\n",
+      "solarradiation                     0.0155      0.002      7.739      0.000       0.012       0.019\n",
+      "uvindex                           -0.1874      0.074     -2.542      0.011      -0.332      -0.043\n",
+      "severerisk                        -0.0834      0.011     -7.677      0.000      -0.105      -0.062\n",
+      "Rain                               0.0115      0.219      0.052      0.958      -0.418       0.440\n",
+      "Clear                              0.3852      2.065      0.187      0.852      -3.664       4.434\n",
+      "Freezing Drizzle/Freezing Rain    -0.8438      2.322     -0.363      0.716      -5.395       3.708\n",
+      "Partially cloudy                  -0.1487      2.056     -0.072      0.942      -4.179       3.882\n",
+      "Overcast                          -0.2641      2.081     -0.127      0.899      -4.345       3.817\n",
+      "Ice                                2.9731      1.908      1.558      0.119      -0.768       6.714\n",
+      "Snow                              -0.2787      0.307     -0.909      0.364      -0.880       0.323\n",
+      "==============================================================================\n",
+      "Omnibus:                      121.811   Durbin-Watson:                   2.001\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              133.666\n",
+      "Skew:                           0.413   Prob(JB):                     9.44e-30\n",
+      "Kurtosis:                       3.306   Cond. No.                     2.26e+05\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 2.26e+05. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "Mean Squared Error (MSE): 21.90228839102366\n",
+      "R^2 Score: 0.2549848977436511\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit linear regression model\n",
+    "X_train = sm.add_constant(X_train)  # Add constant to X_train\n",
+    "model = sm.OLS(y_train, X_train)    # Create model\n",
+    "results = model.fit()               # Fit model\n",
+    "print(results.summary())\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "X_test = sm.add_constant(X_test)  # Add constant to X_test\n",
+    "y_pred = results.predict(X_test)  # Predict using the fitted model\n",
+    "\n",
+    "# Calculate MSE\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "\n",
+    "# Calculate R^2 score\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"R^2 Score:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
