Andrew did nothing

--- a/transformed_linear_reg.ipynb
+++ b/transformed_linear_reg.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_4500\\2052664022.py:10: DtypeWarning: Columns (23,24,36,49,50,52,53,54,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  master = pd.read_csv('master1.csv')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -74,6 +82,18 @@
       "Partially cloudy: 0.0075545118\n",
       "Rain: 0.0041296931\n",
       "Snow: 0.0053355972\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_4500\\2052664022.py:43: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  final_data['conditions'] = final_data['conditions'].str.split(',')\n"
      ]
     }
    ],
@@ -164,7 +184,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-values:\n",
+      "FullMoon: 0.0027389536\n",
+      "Holiday: 0.0460838299\n",
+      "tempmax: 0.3492139924\n",
+      "tempmin: 0.6324105907\n",
+      "temp: 0.7198880440\n",
+      "feelslikemax: 0.5968790024\n",
+      "feelslikemin: 0.7385188830\n",
+      "feelslike: 0.3452091348\n",
+      "dew: 0.0549393937\n",
+      "humidity: 0.9418282443\n",
+      "precip: 0.6900599291\n",
+      "precipcover: 0.0115427343\n",
+      "snow: 0.3291626580\n",
+      "windspeed: 0.0624735520\n",
+      "sealevelpressure: 0.2944298706\n",
+      "cloudcover: 0.1729469791\n",
+      "visibility: 0.0545324255\n",
+      "solarradiation: 0.8142012386\n",
+      "uvindex: 0.0000000000\n",
+      "severerisk: 0.0352673802\n",
+      " Freezing Drizzle/Freezing Rain: 0.0000000000\n",
+      " Ice: 0.6900815269\n",
+      " Overcast: 0.0632629854\n",
+      " Partially cloudy: 0.8060263298\n",
+      " Rain: 0.7974514247\n",
+      "Clear: 0.5836022117\n",
+      "Overcast: 0.0023914140\n",
+      "Partially cloudy: 0.0075545118\n",
+      "Rain: 0.0041296931\n",
+      "Snow: 0.0053355972\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Access p-values\n",
+    "p_values = sm_model.pvalues\n",
+    "print(\"P-values:\")\n",
+    "\n",
+    "# Print variable names and p-values without scientific notation\n",
+    "for variable, p_value in zip(X.columns, p_values):\n",
+    "    print(f\"{variable}: {p_value:.10f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +384,39 @@
     "plt.show()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test_back = y_test ** 2\n",
+    "y_pred_back = y_pred ** 2\n",
+    "\n",
+    "mse_back = mean_squared_error(y_test_back, y_pred_back)\n",
+    "r2_back = r2_score(y_test_back, y_pred_back)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.033317118764494\n",
+      "0.25052790314776396\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mse_back)\n",
+    "\n",
+    "print(r2_back)"
    ]
   }
  ],
