--- a/untransformed_linear_reg.ipynb
+++ b/untransformed_linear_reg.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_11640\\3022355488.py:10: DtypeWarning: Columns (23,24,36,49,50,52,53,54,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_14660\\3022355488.py:10: DtypeWarning: Columns (23,24,36,49,50,52,53,54,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  master = pd.read_csv('master1.csv')\n",
-      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_11640\\3022355488.py:43: SettingWithCopyWarning: \n",
+      "C:\\Users\\Matt\\AppData\\Local\\Temp\\ipykernel_14660\\3022355488.py:43: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +229,130 @@
     "plt.ylabel('Frequency')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-values:\n",
+      "const                              4.104269e-02\n",
+      "FullMoon                           4.583404e-02\n",
+      "Holiday                            3.609208e-01\n",
+      "tempmax                            6.644182e-01\n",
+      "tempmin                            8.609646e-01\n",
+      "temp                               6.197258e-01\n",
+      "feelslikemax                       7.829527e-01\n",
+      "feelslikemin                       3.913791e-01\n",
+      "feelslike                          9.882209e-02\n",
+      "dew                                8.284529e-01\n",
+      "humidity                           9.159977e-01\n",
+      "precip                             1.573460e-02\n",
+      "precipcover                        2.482519e-01\n",
+      "snow                               1.052588e-01\n",
+      "windspeed                          3.640757e-01\n",
+      "sealevelpressure                   1.875899e-01\n",
+      "cloudcover                         4.248900e-02\n",
+      "visibility                         9.513384e-01\n",
+      "solarradiation                     1.144719e-14\n",
+      "uvindex                            1.109123e-02\n",
+      "severerisk                         2.108999e-14\n",
+      " Freezing Drizzle/Freezing Rain    7.077932e-01\n",
+      " Ice                               1.236987e-01\n",
+      " Overcast                          8.847823e-01\n",
+      " Partially cloudy                  8.780474e-01\n",
+      " Rain                              7.010537e-01\n",
+      "Clear                              3.096551e-02\n",
+      "Overcast                           7.706966e-02\n",
+      "Partially cloudy                   4.903524e-02\n",
+      "Rain                               6.016111e-02\n",
+      "Snow                               8.727429e-02\n",
+      "dtype: float64\n",
+      "FullMoon: 0.0410426866\n",
+      "Holiday: 0.0458340438\n",
+      "tempmax: 0.3609207990\n",
+      "tempmin: 0.6644181865\n",
+      "temp: 0.8609646474\n",
+      "feelslikemax: 0.6197258068\n",
+      "feelslikemin: 0.7829527429\n",
+      "feelslike: 0.3913790511\n",
+      "dew: 0.0988220859\n",
+      "humidity: 0.8284529029\n",
+      "precip: 0.9159976836\n",
+      "precipcover: 0.0157345985\n",
+      "snow: 0.2482519402\n",
+      "windspeed: 0.1052587938\n",
+      "sealevelpressure: 0.3640757230\n",
+      "cloudcover: 0.1875899196\n",
+      "visibility: 0.0424889952\n",
+      "solarradiation: 0.9513383828\n",
+      "uvindex: 0.0000000000\n",
+      "severerisk: 0.0110912312\n",
+      " Freezing Drizzle/Freezing Rain: 0.0000000000\n",
+      " Ice: 0.7077932230\n",
+      " Overcast: 0.1236986867\n",
+      " Partially cloudy: 0.8847822939\n",
+      " Rain: 0.8780473647\n",
+      "Clear: 0.7010536964\n",
+      "Overcast: 0.0309655082\n",
+      "Partially cloudy: 0.0770696624\n",
+      "Rain: 0.0490352389\n",
+      "Snow: 0.0601611076\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Access p-values\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "\n",
+    "# Train OLS model\n",
+    "X_with_intercept = sm.add_constant(X_train)  # Add intercept term\n",
+    "sm_model = sm.OLS(y_train, X_with_intercept).fit()\n",
+    "\n",
+    "# Access p-values\n",
+    "p_values = sm_model.pvalues\n",
+    "print(\"P-values:\")\n",
+    "print(p_values)\n",
+    "\n",
+    "for variable, p_value in zip(X.columns, p_values):\n",
+    "    print(f\"{variable}: {p_value:.10f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables with p-values < 0.05:\n",
+      "FullMoon: 0.0410426866\n",
+      "Holiday: 0.0458340438\n",
+      "precipcover: 0.0157345985\n",
+      "visibility: 0.0424889952\n",
+      "uvindex: 0.0000000000\n",
+      "severerisk: 0.0110912312\n",
+      " Freezing Drizzle/Freezing Rain: 0.0000000000\n",
+      "Overcast: 0.0309655082\n",
+      "Rain: 0.0490352389\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print variable names and p-values less than 0.05\n",
+    "print(\"Variables with p-values < 0.05:\")\n",
+    "for variable, p_value in zip(X.columns, p_values):\n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"{variable}: {p_value:.10f}\")"
    ]
   }
  ],
